--- a/src/ILCompiler/src/project.json
+++ b/src/ILCompiler/src/project.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "NETStandard.Library": "1.6.0",
-    "System.Reflection.Metadata": "1.4.1-beta-24227-04",
+    "NETStandard.Library": "1.6.1",
+    "System.Reflection.Metadata": "1.4.2",
     "System.CommandLine": "0.1.0-e160909-1"
   },
   "frameworks": {
