--- a/src/AotPackageReference/project.json
+++ b/src/AotPackageReference/project.json
@@ -18,8 +18,8 @@
     "System.Globalization": "4.4.0-beta-24906-01",
     "System.ObjectModel": "4.4.0-beta-24906-01",
     "System.Collections.Concurrent": "4.4.0-beta-24906-01",
-    "System.Reflection.Metadata": "1.4.2",
-    "System.Collections.Immutable": "1.3.1"
+    "System.Reflection.Metadata": "1.4.1-beta-24227-04",
+    "System.Collections.Immutable": "1.2.0"
   },
   "frameworks": {
     "uap10.1": { }
