--- a/src/ILCompiler.MetadataTransform/src/project.json
+++ b/src/ILCompiler.MetadataTransform/src/project.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "NETStandard.Library": "1.6.1",
-    "System.Reflection.Metadata": "1.4.2"
+    "NETStandard.Library": "1.6.0",
+    "System.Reflection.Metadata": "1.4.1-beta-24227-04"
   },
   "frameworks": {
-    "netstandard1.3": { }
+    "netstandard1.3": {}
   }
 }
