--- a/src/ILCompiler/desktop/project.json
+++ b/src/ILCompiler/desktop/project.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
-    "NETStandard.Library": "1.6.1",
-    "System.IO.MemoryMappedFiles": "4.3.0",
-    "System.Reflection.Metadata": "1.4.2",
-    "System.Runtime.CompilerServices.Unsafe": "4.3.0",
-    "Microsoft.DiaSymReader": "1.1.0",
+    "NETStandard.Library": "1.6.0",
+    "System.IO.MemoryMappedFiles": "4.0.0",
+    "System.Reflection.Metadata": "1.4.1-beta-24227-04",
+    "System.Runtime.CompilerServices.Unsafe": "4.0.0",
+    "Microsoft.DiaSymReader": "1.0.8",
     "System.CommandLine": "0.1.0-e160909-1"
   },
   "frameworks": {
