--- a/src/packaging/packages.targets
+++ b/src/packaging/packages.targets
@@ -42,7 +42,7 @@
             <ILCompilerFiles Include="ILCompiler.MetadataWriter.dll" />
             <ILCompilerFiles Include="ILCompiler.TypeSystem.dll" />
             <ILCompilerBinPlace Include="@(ILCompilerFiles)">
-                <Text><![CDATA[        <file src="$(RelativeProductBinDir)/ILCompiler/%(Identity)" target="runtimes/any/lib/netcoreapp1.1/%(Identity)" /> ]]></Text>
+                <Text><![CDATA[        <file src="$(RelativeProductBinDir)/ILCompiler/%(Identity)" target="runtimes/any/lib/dotnet/%(Identity)" /> ]]></Text>
             </ILCompilerBinPlace>
 
             <ILCompilerNativeFiles Include="jitinterface.dll" Condition="'$(OSGroup)'=='Windows_NT'" />
@@ -189,13 +189,13 @@
                 <Files>@(ILCompilerBinPlace -> '%(Text)', '')</Files>
                 <!-- TODO: Obtain this from project.lock.json -->
                 <Dependencies><![CDATA[
-        <dependency id="NETStandard.Library" version="1.6.1" />
-        <dependency id="System.Collections.Immutable" version="1.3.1" />
-        <dependency id="System.IO.MemoryMappedFiles" version="4.3.0" />
-        <dependency id="System.Reflection.Metadata" version="1.4.2" />
-        <dependency id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" />
-        <dependency id="System.Xml.ReaderWriter" version="4.3.0" />
-        <dependency id="Microsoft.DiaSymReader" version="1.1.0" />
+        <dependency id="NETStandard.Library" version="1.6.0" />
+        <dependency id="System.Collections.Immutable" version="1.2.0" />
+        <dependency id="System.IO.MemoryMappedFiles" version="4.0.0" />
+        <dependency id="System.Reflection.Metadata" version="1.4.1-beta-24227-04" />
+        <dependency id="System.Runtime.CompilerServices.Unsafe" version="4.0.0" />
+        <dependency id="System.Xml.ReaderWriter" version="4.0.11" />
+        <dependency id="Microsoft.DiaSymReader" version="1.0.8" />
         <dependency id="System.CommandLine" version="0.1.0-e160909-1" />
                     ]]></Dependencies>
             </NuSpecFile>
@@ -322,14 +322,19 @@
     "version": "1.0.0-*",
 
     "dependencies": {
-        "NETStandard.Library": "1.6.1",
-        "Microsoft.NETCore.Runtime.CoreCLR": "1.1.0",
-        "Microsoft.NETCore.TestHost": "1.1.0",
+        "NETStandard.Library": "1.6.0",
+        "Microsoft.NETCore.Runtime.CoreCLR": "1.0.4",
+        "Microsoft.NETCore.TestHost": "1.0.0",
         "toolchain.$(NuPkgRid).$(RuntimeSdkPackageName)": "$(RuntimeSdkVersion)",
     },
 
     "frameworks": {
-        "netcoreapp1.1": { }
+        "dnxcore50": {
+            "imports": [
+                "netstandard1.6",
+                "portable-net45+win8"
+            ]
+        }
     },
 
     "runtimes": {
@@ -342,7 +347,7 @@
         <WriteLinesToFile File="$(Stage1ProjectJsonFile)" Lines="$(Stage1ProjectJsonLines)" Overwrite="true" />
         <WriteLinesToFile File="$(Stage1ProjectDir)/Program.cs" Lines="class Program { public static void Main() { } }" Overwrite="true" />
         <Exec Command="&quot;$(DnuToolPath)&quot; restore -s &quot;$(ProductPackageDir)&quot; $(DnuRestoreSource) &quot;$(Stage1ProjectDir)&quot;" />
-        <Exec Command="&quot;$(DnuToolPath)&quot; publish &quot;$(Stage1ProjectDir)&quot; --native-subdirectory -o &quot;$(Stage1PublishDir)&quot; -f &quot;netcoreapp1.1&quot; --runtime &quot;$(NuPkgRid)&quot;" />
+        <Exec Command="&quot;$(DnuToolPath)&quot; publish &quot;$(Stage1ProjectDir)&quot; --native-subdirectory -o &quot;$(Stage1PublishDir)&quot; -f &quot;dnxcore50&quot; --runtime &quot;$(NuPkgRid)&quot;" />
 
     </Target>
 </Project>
