Enable multi-module for CoreCLR tests
* Allows runtest.cmd /multimodule /coreclr
* Modify build integration targets to allow for tests with multiple
assemblies. We have two set of assembly inputs to ILC: @(ManagedLibrary)
which despite being an Item contains the main managed assembly to use as
the template name for the response file and output object file base
name. @(IlcCompileInput) is the list of assemblies that are inputs to
Ilc. This change allows us to compile all the app assemblies into a
single object file.
* Specify the inputs / outputs to the MSBuild task that builds the
framework assembly obj files. This removes a page of spam per test when
MSBuild skips over the already-built obj files.
* Currently 12 tests fail due to some EH issue that needs investigating.

--- a/tests/CoreCLR/Test.csproj
+++ b/tests/CoreCLR/Test.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <!-- Some tests consist of multiple assemblies - make sure ILC sees them -->
-    <IlcReference Include="$(MSBuildProjectDirectory)\*.dll" />
+    <IlcCompileInput Include="$(MSBuildProjectDirectory)\*.dll" />
   </ItemGroup>
   
   <Import Project="$(CoreRT_TestRoot)\Test.Common.targets" />
