NS2.0 work for Delegate and MulticastDelegate:       - Addition of the 2 missing constructors on Delegate       - Addition of the 2 missing constructors on MulticastDelegate       - Addition of the DynamicInvokeImpl API on Delegate       - Enabling serialization for delegates (implemented on top of reflection serialization).
[tfs-changeset: 1647990]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -570,6 +570,7 @@
     <Compile Include="System\IDisposable.cs" />
     <Compile Include="System\Delegate.cs" />
     <Compile Include="System\Delegate.DefaultParameters.cs" />
+    <Compile Include="System\DelegateSerializationHolder.cs" />
     <Compile Include="System\RuntimeTypeHandle.cs" />
     <Compile Include="System\Exception.cs" />
     <Compile Include="System\RuntimeExceptionHelpers.cs" />
