Initial support for precomputed reflection - Supports typeof() - Supports method invoke in simple cases - Does not utilize all available dynamic invoke stubs (in complex cases, relies on interpreter) - Read metadata from disk instead of generating live within corert managed environment - Fix model for determining type/method mappings within PrecomputedMetadataManager. The mapping apply to exact instantiations not open instantiations - Decouple MetadataManager creation from needing a NodeFactory, this simplifies initial setup of the compiler - Add new relocation type IMAGE_REL_BASED_ADDR32NB which is a Windows RVA - Use Windows RVA for external reference table in non CoreRT builds - Move dependency calculation for MethodCodeNode extras into helper function
[tfs-changeset: 1648305]

--- a/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
+++ b/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
@@ -88,6 +88,8 @@
     </Compile>
     <Compile Include="Compiler\CompilerGeneratedType.cs" />
     <Compile Include="Compiler\CompilerTypeSystemContext.BoxedTypes.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\CodeBasedDependencyAlgorithm.cs" />
+    <Compile Include="Compiler\DependencyAnalysis\NonExternMethodSymbolNode.cs" />
     <Compile Include="Compiler\ILStreamReader.cs" />
     <Compile Include="Compiler\LibraryInitializers.cs" />
     <Compile Include="Compiler\ICompilationRootProvider.cs" />
