--- a/tests/src/Simple/PInvoke/PInvoke.csproj
+++ b/tests/src/Simple/PInvoke/PInvoke.csproj
@@ -14,6 +14,7 @@
     <NativeObjectExt Condition="'$(OS)' != 'Windows_NT'">.o</NativeObjectExt>
     <PInvokeNativeObject>$(IntermediateOutputPath)$(OutputName)$(NativeObjectExt)</PInvokeNativeObject>
     <DefineConstants>$(DefineConstants);$(OS)</DefineConstants>
+    <DefineConstants Condition="$(NativeCodeGen) == 'cpp'">$(DefineConstants);CODEGEN_CPP</DefineConstants>
     <UseDebugCrt Condition="'$(Configuration)' == 'Debug'">true</UseDebugCrt>
   </PropertyGroup>
 
