Passing target platform&os to IlcCompiler

--- a/tests/src/Simple/SimpleTest.targets
+++ b/tests/src/Simple/SimpleTest.targets
@@ -40,4 +40,8 @@
     <CustomLinkerArg Include="$(AdditionalLinkerFlags)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <IlsArg Include="--targetarch=$(Platform)" />
+  </ItemGroup>
+
 </Project>
