Some fixes added

--- a/tests/src/Simple/SimpleTest.targets
+++ b/tests/src/Simple/SimpleTest.targets
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <IlsArg Include="--targetarch=$(Platform)" />
+    <IlcArg Include="--targetarch=$(Platform)" />
   </ItemGroup>
 
 </Project>
