--- a/dir.targets
+++ b/dir.targets
@@ -18,6 +18,11 @@
     <CLSCompliant Condition="'$(CLSCompliant)'==''">false</CLSCompliant>
   </PropertyGroup>
 
+  <!-- Setting IsTestProject prior to Build.Common.targets -->
+  <PropertyGroup>
+    <IsTestProject Condition="'$(IsTestProject)'=='' And $(MSBuildProjectName.EndsWith('.tests', StringComparison.OrdinalIgnoreCase))">true</IsTestProject>
+  </PropertyGroup>
+
   <Import Project="$(ToolsDir)/Build.Common.targets" />
 
   <!-- Override corefx multi targeting support -->
