--- a/dir.targets
+++ b/dir.targets
@@ -13,24 +13,20 @@
   <Target Name="RebuildAndTest" DependsOnTargets="Rebuild;Test" />
   <Target Name="Test" />
 
+  <!-- CoreRT projects are not CLSCompliant by default -->
+  <PropertyGroup>
+    <CLSCompliant Condition="'$(CLSCompliant)'==''">false</CLSCompliant>
+  </PropertyGroup>
+
+  <!-- Setting IsTestProject prior to Build.Common.targets -->
+  <PropertyGroup>
+    <IsTestProject Condition="'$(IsTestProject)'=='' And $(MSBuildProjectName.EndsWith('.tests', StringComparison.OrdinalIgnoreCase))">true</IsTestProject>
+  </PropertyGroup>
+
   <Import Project="$(ToolsDir)/Build.Common.targets" />
 
   <!-- Override corefx multi targeting support -->
   <Target Name="ConvertCommonMetadataToAdditionalProperties" BeforeTargets="AssignProjectConfiguration" />
-
-  <!-- Remove once we pick up buildtools with the fix - https://github.com/dotnet/buildtools/pull/1082 -->
-  <!-- Override GetLatestCommitHash with redirected error output to avoid bogus messages 
-       about missing git tool when building inside VS -->
-  <Target Name="GetLatestCommitHash" Condition="'$(LatestCommit)'==''">
-    <Exec Command="git rev-parse HEAD 2>&amp;1" StandardOutputImportance="Low" IgnoreExitCode="true" IgnoreStandardErrorWarningFormat="true" ConsoleToMSBuild="true">
-      <Output TaskParameter="ConsoleOutput" PropertyName="LatestCommit" />
-      <Output TaskParameter="ExitCode" PropertyName="LatestCommitExitCode" />
-    </Exec>
-    <!-- We shouldn't fail the build if we can't retreive the commit hash, so in this case just set it to N/A -->
-    <PropertyGroup Condition="'$(LatestCommitExitCode)'!='0'">
-      <LatestCommit>N/A</LatestCommit>
-    </PropertyGroup>
-  </Target>
 
   <PropertyGroup Condition="'$(TargetFrameworkIdentifier)' != '.NETFramework'">
     <!-- We don't use any of MSBuild's resolution logic for resolving the framework, so just set these two properties to any folder that exists to skip
