--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -249,6 +249,7 @@
     <Compile Include="System\ArrayTypeMismatchException.cs" />
     <Compile Include="System\AsyncCallback.cs" />
     <Compile Include="System\BadImageFormatException.cs" />
+    <Compile Include="System\BitConverter.cs" />
     <Compile Include="System\Boolean.cs" />
     <Compile Include="System\Buffer.cs" />
     <Compile Include="System\ByReference.cs" />
