[arm32 unix building] Passing target platform and os to IlcCompiler for cross compiling (#2793)
* Passing target platform&os to IlcCompiler
* Deleted /sys/devices/system/cpu/cache parsing
* Added empty version of InteropThunksHelpers for arm

--- a/tests/src/Simple/SimpleTest.targets
+++ b/tests/src/Simple/SimpleTest.targets
@@ -40,4 +40,8 @@
     <CustomLinkerArg Include="$(AdditionalLinkerFlags)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <IlcArg Include="--targetarch=$(Platform)" />
+  </ItemGroup>
+
 </Project>
