--- a/src/packaging/netcoreapp/project.json
+++ b/src/packaging/netcoreapp/project.json
@@ -2,10 +2,11 @@
   "frameworks": {
     "netcoreapp2.0": {
       "dependencies": {
-        "Microsoft.NETCore.App": "2.0.0-beta-001368-00",
+        "Microsoft.NETCore.App": "2.0.0-beta-001663-00",
 
         "System.Threading": "4.4.0-beta-24913-02",
         "System.Linq": "4.4.0-beta-24913-02",
+        "System.Runtime.InteropServices": "4.4.0-beta-24913-02",
         "System.Runtime.CompilerServices.Unsafe": "4.4.0-beta-24913-02",
 
         "runtime.native.System": "4.4.0-beta-24913-02",
